html for player selection

--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
             <ion-icon id="heart3" name="heart"></ion-icon>
             <h2>Score: <span id="score">0</span></h2>
         </div>
+        <div id="game-board">
+           <aside id="players">
+               <h1>Select your player</h1>
+               <div class="player">
+                    <img src="images/char-boy.png" alt="boy">
+               </div>
+               <div class="player">
+                    <img src="images/char-cat-girl.png" alt="cat girl">
+               </div>
+               <div class="player">
+                    <img src="images/char-princess-girl.png" alt="princess girl">
+               </div>
+               <div class="player">
+                    <img src="images/char-horn-girl.png" alt="horn girl">
+               </div>
+           </aside> 
+        </div>
         <dialog id="dialog">
             <section>
                 <h2>Game Over!</h2>
