allow player selection

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div id="game-board">
            <aside id="players">
-               <h1>Select your player</h1>
+               <h1 id="option">Select your player</h1>
                <div class="player">
                     <img src="images/char-boy.png" alt="boy">
                </div>
